completed app.js functions and components - except image sizes

--- a/clicky-game/public/index.html
+++ b/clicky-game/public/index.html
@@ -16,6 +16,19 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <img src="/clicky-game/public/assets/images/BangDream.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/CatRoommate.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/FoodWars5.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/FruitsBasket.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/Jojos.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/LoveIsWar.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/MyHeroAcademia.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/MyTeenageSNAFU.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/NextLifeAsaVillainess.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/OnePiece.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/PS5.jpg" /> -->
+    <!-- <img src="/clicky-game/public/assets/images/QueensChoice.jpg" /> -->
+    
     <iframe
       frameborder="0"
       allowtransparency="true"
